syntax = "proto3";

package optional_types;

enum TestEnum {
  ZERO = 0;
  FOO = 1;
  BAR = 2;
  BAZ = 3;
}

message SimpleMessage {
  int32 a = 1;
}

message OptionalMessage {
  optional int32 o_int32 = 1;
  optional int64 o_int64 = 2;
  optional bytes o_bytes = 3;
  optional string o_string = 4;
  optional TestEnum o_enum = 5;
  optional SimpleMessage o_message = 6;
}
